--- a/frontend/src/app/kartei-service/kartei-service.component.scss
+++ b/frontend/src/app/kartei-service/kartei-service.component.scss
@@ -1,7 +1,7 @@
 #kartei-übersicht-container {
   display: flex;
   justify-content: center;
-  width: 90vw;
+  width: 85vw;
 }
 
 #kartei-übersicht-header {
