--- a/frontend/src/app/kartei-service/lernen/lernen.component.scss
+++ b/frontend/src/app/kartei-service/lernen/lernen.component.scss
@@ -1,5 +1,5 @@
 #super-container {
-  width: 90vw;
+  width: 85vw;
   display: flex;
   justify-content: center;
 }
