--- a/frontend/src/app/kartei-service/stapel-erstellen/stapel-erstellen.component.scss
+++ b/frontend/src/app/kartei-service/stapel-erstellen/stapel-erstellen.component.scss
@@ -30,6 +30,6 @@
 
 .super-container {
   display: flex;
-  width: 90vw;
+  width: 85vw;
   justify-content: center;
 }
