--- a/frontend/src/app/modul-service/modul-service.component.scss
+++ b/frontend/src/app/modul-service/modul-service.component.scss
@@ -3,8 +3,10 @@
   justify-content: center;
   align-items: center;
   height: 20%;
+  margin-top: 15px;
+  margin-bottom: 15px;
   background-color: rgb(248, 249, 250);
-  width: 80vw;
+  width: 85vw;
 }
 
 #modul-pagination {
