--- a/frontend/src/app/user-profile/user-profile.component.scss
+++ b/frontend/src/app/user-profile/user-profile.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
-  width: 90vw;
+  width: 85vw;
 }
 
 #account-table-container {
